--- a/frontend/scss/admin.scss
+++ b/frontend/scss/admin.scss
@@ -23,3 +23,24 @@ form
         }
     }
 }
+
+#feedback
+{
+    font-weight: bold;
+    padding:$layout-margin-s/2;
+    margin-top:$layout-margin-s;
+}
+
+#feedback.success
+{
+    border:1px solid lighten(green , 10%);
+    background-color:lighten(green , 60%);
+    color:lighten(green , 10%);
+}
+
+#feedback.failure
+{
+    border:1px solid lighten(red , 10%);
+    background-color:lighten(red , 40%);
+    color:lighten(red , 10%);
+}
