Data collation via JavaScript is done, basic PHP validation on the data implemented, time to get error messages feeding back into the UI followed by data saving and initial state rendering

--- a/frontend/scss/admin.scss
+++ b/frontend/scss/admin.scss
@@ -72,7 +72,7 @@ form
     {
         padding:10px;
     }
-    .react-template
+    .jsx-metabox
     {
         section 
         {
@@ -92,7 +92,7 @@ form
             }
         }
     }
-    .network-select , .stackla-filter
+    .stackla-widget-term , .stackla-widget-filter
     {
         fieldset
         {
@@ -117,7 +117,7 @@ form
             display:block;
         }
 
-        .rule-values
+        .term-values
         {
             fieldset.hide
             {
