--- a/frontend/scss/admin.scss
+++ b/frontend/scss/admin.scss
@@ -22,23 +22,39 @@
             vertical-align: top;
         }
     }
+
+    input[type='text']
+    {
+        padding:5px;
+    }
+
+    input[type='checkbox']
+    {
+        margin:0;
+        margin-right:3px;
+    }
 }
 
-#feedback
+#feedback , .auth-notification
 {
     font-weight: bold;
     padding:$layout-margin-s/2;
     margin-top:$layout-margin-s;
 }
 
-#feedback.success
+.auth-notification
+{
+    margin:$layout-margin-s 0 $layout-margin-s 0;
+}
+
+#feedback.success , .auth-notification.success
 {
     border:1px solid lighten(green , 10%);
     background-color:lighten(green , 60%);
     color:lighten(green , 10%);
 }
 
-#feedback.failure
+#feedback.failure , .auth-notification.failure
 {
     border:1px solid lighten(red , 10%);
     background-color:lighten(red , 40%);
