--- a/frontend/scss/admin.scss
+++ b/frontend/scss/admin.scss
@@ -196,6 +196,10 @@
         padding:10px;
         color:red;
     }
+    .stackla-request-error
+    {
+        margin-bottom:10px;
+    }
     .term-network-set
     {
         padding:5px;
