--- a/frontend/scss/_vars.scss
+++ b/frontend/scss/_vars.scss
@@ -6,6 +6,10 @@ $color-label:#94D6DA;
 $color-button:#99CC33;
 $color-bg-form:#004889;
 $color-border:#DEDEDE;
+$color-success:#659a2a;
+$color-error:#d34730;
+$color-prompt:#fccf9d;
+$color-widget-block-bg:#f6f6f6;
 $layout-banner-height:100px;
 $layout-margin-s:20px;
 $layout-margin-m:$layout-margin-s * 2;
