--- a/frontend/scss/admin.scss
+++ b/frontend/scss/admin.scss
@@ -37,33 +37,93 @@
 
 #feedback , .auth-notification
 {
-    font-weight: bold;
-    padding:$layout-margin-s/2;
+    
+    padding:$layout-margin-s;
     margin-top:$layout-margin-s;
 }
 
 .auth-notification
 {
+    h3
+    {
+        font-size:1.2em;
+        margin-bottom:10px;
+        font-weight: bold;
+        padding:0!important;
+    }
     margin:$layout-margin-s 0 $layout-margin-s 0;
 }
 
 #feedback.success , .auth-notification.success
 {
-    border:1px solid lighten(green , 10%);
-    background-color:lighten(green , 60%);
-    color:lighten(green , 10%);
+    h3 
+    {
+        color:$color-success;
+    }
+    ul
+    {
+        list-style: disc;
+
+        li 
+        {
+            margin-left:20px;
+        }
+    }
+    border:1px solid $color-success;
+    background-color:lighten($color-success , 55%);
+    color:black;
 }
 
 #feedback.failure , .auth-notification.failure
 {
+
     border:1px solid lighten(red , 10%);
     background-color:lighten(red , 40%);
     color:lighten(red , 10%);
 }
 
+.auth-notification.prompt
+{
+    h3
+    {
+        color:#ff6525;
+    }
+    border:1px solid $color-prompt;
+    background-color:lighten($color-prompt , 15%);
+}
+
+.error
+{
+    border:1px solid $color-error !important;
+}
+
+.error-message
+{
+    display:none;
+    padding:10px;
+    color:$color-error;
+    background:lighten($color-error , 45%);
+    border:1px solid $color-error;
+    border-top:0;
+}
+
+.error-message.display
+{
+    display: block;
+}
+#stackla-meta-box
+{
+    div.inside 
+    {
+        margin-top:0 !important;
+    }
+}
 #stackla-metabox
 {
-
+    fieldset
+    {
+        margin-bottom:0;
+    }
     label 
     {
         font-weight: bold;
@@ -83,13 +143,72 @@
     }
     input[type='text'].widefat
     {
-        padding:10px;
+        padding:5px;
     }
     .jsx-metabox
     {
+        padding-top:$layout-margin-s;
+        background:url(../img/poweredByLogo.png) bottom right no-repeat;
+        .overlay
+        {
+            transition:opacity 0.3s ease;
+            opacity: 0;
+            width: 100%;
+            height: 100%;   
+            visibility: hidden;
+            position:absolute;
+            top:0px;
+            left:0px;
+            z-index: 2;
+            background-color:rgba(0, 0, 0, 0.6);
+
+            .loader 
+            {
+                opacity:0;
+                visibility: hidden;
+                margin-top:30px;
+                transition:0.3s ease;
+                position: relative;
+                top: 50%;
+                transform:translateY(-50%);
+
+                .logo 
+                { 
+                    background:url(../img/logo.png) 50% 50% no-repeat;
+                    height: 300px;
+                }
+                .message 
+                {
+                    color:#FFF016;
+                    position: relative;
+                    top: 50%;
+                    left:50%;
+                    transform:translateY(-50%);
+                    transform:translateX(-50%);
+                    margin:auto;
+                    margin-top:80px;
+                    display: inline-block;
+                    background: #3A3A3C;
+                    padding:10px;
+                    border-radius: 10px;
+                }
+            }
+        }
+        .overlay.display 
+        {
+            visibility:visible;
+            opacity: 1;
+            
+            .loader
+            {
+                opacity:1;
+                visibility: visible;
+                margin-top:0;
+            }
+        }
         section 
         {
-            margin-bottom: 10px;
+            margin-bottom: $layout-margin-s;
         }
         header
         {
@@ -122,13 +241,18 @@
     }
     .stackla-widget-section
     {
-        padding:10px;
-        border:1px solid white;
+        padding:$layout-margin-s;
+        border:1px solid $color-widget-block-bg;
+        background-color:$color-widget-block-bg;
         fieldset
         {
+            vertical-align: top;
             display: inline-block;
             margin-right:20px;
-            
+            label 
+            {
+                font-size:0.9rem;
+            }
             label.hide 
             {
                 display:none;
@@ -139,17 +263,10 @@
             }
             label.checkbox
             {
+                font-size:0.9em;
                 vertical-align: top;
                 display: inline-block;
             }
-        }
-        fieldset.term-name , fieldset.widget-title
-        {
-            display:block;
-        }
-        fieldset.term-name
-        {
-            margin-bottom:10px;
         }
         .term-values
         {
@@ -175,40 +292,90 @@
             }
         }
     }
-    .stackla-block
-    {
-        margin-bottom:10px;
-    }
-    .stackla-block:last-child
-    {
-        margin:0;
-    }
     .stackla-widget-error
     {
-        border:1px solid lighten(red , 35%);
-        background-color:lighten(red , 40%)
+        background:lighten($color-error , 45%);
+        border:1px solid $color-error;
+        border-bottom:0;
     }
     .stackla-error-message
     {
-        border:1px solid lighten(red , 35%);
+        padding:$layout-margin-s;
+        padding-top:0;
+        color:$color-error;
+        background:lighten($color-error , 45%);
+        border:1px solid $color-error;
         border-top:0;
-        background-color:lighten(red , 35%);
-        padding:10px;
-        color:red;
     }
     .stackla-request-error
     {
         margin-bottom:10px;
     }
+    section.title 
+    {
+        .widget-title
+        {
+            width:100%;
+        }
+        input[type='text']
+        {
+            width:100%;
+        }
+    }
+    .terms , .filters
+    {
+        .stackla-block
+        {
+            .stackla-widget-section
+            {
+                margin-bottom:5px;
+
+            }
+        }
+        .stackla-block:last-child
+        {
+            .stackla-widget-section
+            {
+                margin-bottom:0;
+            }
+        }
+        .stackla-widget-error
+        {
+            background:lighten($color-error , 45%);
+            border:1px solid $color-error;
+
+        }
+        
+        .stackla-error-message
+        {
+            border:0;
+            padding:0;
+            padding-top:$layout-margin-s;
+        }
+        .stackla-request-error
+        {
+            margin-bottom:10px;
+        }
+    }
+    .stackla-block:last-child
+    {
+        .stackla-widget-filters
+        {
+            .stackla-widget-error:last-child
+            {
+                border-bottom:1px solid $color-error;
+            }
+        }
+    }
     .term-network-set , .term-type-set
     {
         padding:5px;
         display: inline-block;
-        font-weight: bold;
         text-transform: capitalize;
-        border-radius:5px;
         width:100%;
-        background:#eee;
+        color:darken($color-widget-block-bg , 40%);
+        background:darken($color-widget-block-bg , 10%);
+        border:1px solid darken($color-widget-block-bg , 15%)
     }
     .term-type-set
     {
@@ -216,8 +383,32 @@
     }
     .remove-term , .remove-filter
     {
-        margin-top:10px;
+        padding-top:10px;
         display:inline-block;
+        text-decoration: underline;
+        cursor: pointer;
     }
-
+    .widget-types , .widget-styles
+    {
+        
+        margin-bottom:$layout-margin-s;
+        span 
+        {
+            vertical-align: top;
+            font-weight: bold;
+        }
+        p
+        {
+            font-size:0.9em;
+            padding-left:20px;
+        }
+    }
+    .widget-choices
+    {
+        margin-bottom:$layout-margin-s;
+    }
+    .widget-styles
+    {
+        margin-bottom:0;
+    }
 }
