--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -7,9 +7,9 @@
     padding:5px 0 0;
 }
 
-.settings-form 
+.settings-form
 {
-    p 
+    p
     {
         margin-bottom:$layout-margin-s;
     }
@@ -37,7 +37,7 @@
 
 #feedback , .auth-notification
 {
-    
+
     padding:$layout-margin-s;
     margin-top:$layout-margin-s;
 }
@@ -56,7 +56,7 @@
 
 #feedback.success , .auth-notification.success
 {
-    h3 
+    h3
     {
         color:$color-success;
     }
@@ -64,7 +64,7 @@
     {
         list-style: disc;
 
-        li 
+        li
         {
             margin-left:20px;
         }
@@ -113,7 +113,7 @@
 }
 #stackla-meta-box
 {
-    div.inside 
+    div.inside
     {
         margin-top:0 !important;
     }
@@ -124,7 +124,7 @@
     {
         margin-bottom:0;
     }
-    label 
+    label
     {
         font-weight: bold;
         margin-bottom:10px;
@@ -137,7 +137,7 @@
     {
         display: none;
     }
-    select.display 
+    select.display
     {
         display: block;
     }
@@ -154,7 +154,7 @@
             transition:opacity 0.3s ease;
             opacity: 0;
             width: 100%;
-            height: 100%;   
+            height: 100%;
             visibility: hidden;
             position:absolute;
             top:0px;
@@ -162,7 +162,7 @@
             z-index: 2;
             background-color:rgba(0, 0, 0, 0.6);
 
-            .loader 
+            .loader
             {
                 opacity:0;
                 visibility: hidden;
@@ -172,12 +172,12 @@
                 top: 50%;
                 transform:translateY(-50%);
 
-                .logo 
-                { 
+                .logo
+                {
                     background:url(../img/logo.png) 50% 50% no-repeat;
                     height: 300px;
                 }
-                .message 
+                .message
                 {
                     color:#FFF016;
                     position: relative;
@@ -194,11 +194,11 @@
                 }
             }
         }
-        .overlay.display 
+        .overlay.display
         {
             visibility:visible;
             opacity: 1;
-            
+
             .loader
             {
                 opacity:1;
@@ -206,24 +206,24 @@
                 margin-top:0;
             }
         }
-        section 
+        section
         {
             margin-bottom: $layout-margin-s;
         }
         header
         {
             margin-bottom:10px;
-            h2 
+            h2
             {
                 margin:0;
             }
-            h2 , a 
+            h2 , a
             {
                 display:inline-block;
                 margin-right:10px;
             }
         }
-        .spinner 
+        .spinner
         {
             background-position:0px 5px;
             width:100px;
@@ -235,7 +235,7 @@
             padding:5px 0 0 25px;
         }
     }
-    .jsx-metabox.saving 
+    .jsx-metabox.saving
     {
         .spinner {display:inline-block;}
     }
@@ -249,15 +249,15 @@
             vertical-align: top;
             display: inline-block;
             margin-right:20px;
-            label 
+            label
             {
                 font-size:0.9rem;
             }
-            label.hide 
+            label.hide
             {
                 display:none;
             }
-            label.display 
+            label.display
             {
                 display:block;
             }
@@ -274,11 +274,11 @@
             {
                 display:none;
             }
-            fieldset.display 
+            fieldset.display
             {
                 display:inline-block;
             }
-            .decorator 
+            .decorator
             {
                 display: inline-block;
                 padding:7px 10px 6px 10px;
@@ -311,7 +311,7 @@
     {
         margin-bottom:10px;
     }
-    section.title 
+    section.title
     {
         .widget-title
         {
@@ -345,7 +345,7 @@
             border:1px solid $color-error;
 
         }
-        
+
         .stackla-error-message
         {
             border:0;
@@ -355,6 +355,10 @@
         .stackla-request-error
         {
             margin-bottom:10px;
+        }
+
+        select {
+            text-transform: capitalize;
         }
     }
     .stackla-block:last-child
@@ -390,9 +394,9 @@
     }
     .widget-types , .widget-styles
     {
-        
+
         margin-bottom:$layout-margin-s;
-        span 
+        span
         {
             vertical-align: top;
             font-weight: bold;
