Add confirmation before save and fix default filter media types

--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -140,10 +140,11 @@
 }
 
 #stackla-meta-box {
-    background-image: url(../img/poweredByLogo.png);
+    background-image: url(../img/powered-by-stackla-2.svg);
     background-position-x: calc(100% - 10px);
     background-position-y: calc(100% - 10px);
     background-repeat: no-repeat;
+    background-size: auto 18px;
     padding-bottom: 8px;
     div.inside {
         margin-top:0 !important;
