--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -85,6 +85,8 @@
         background-position-x: calc(100% - 10px);
         background-position-y: center;
         background-repeat: no-repeat;
+        margin: 0;
+        padding: .67em 0;
     }
 
     p{
