--- a/src/scss/admin.scss
+++ b/src/scss/admin.scss
@@ -142,17 +142,18 @@
 }
 
 #stackla-meta-box {
-    background-image: url(../img/powered-by-stackla-2.svg);
-    background-position-x: calc(100% - 10px);
-    background-position-y: calc(100% - 10px);
-    background-repeat: no-repeat;
-    background-size: auto 18px;
-    padding-bottom: 8px;
     div.inside {
         margin-top:0 !important;
     }
 }
-
+.powered-by-stackla{
+    background-image: url(../img/powered-by-stackla-2.svg);
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: auto 18px;
+    height: 30px;
+    margin-top: -18px;
+}
 #stackla-metabox {
     fieldset {
         margin-bottom:0;
